# wrap

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
.cspell/: custom-dictionary-workspace.txt
.github/: copilot-instructions.md
.github/old-workflows/: fast-forward-develop.yml
.github/scripts/: update_readme.py
.github/workflows/: check-cargo-version.yml  check.yml  ci-nix.yml  docs.yml  fast-forward-develop.yml  help-to-readme.yml  release.yml
nix/modules/: devshell.nix  formatting.nix  pre-commit.nix  rust.nix
src/: logger.rs  main.rs
