[package]
authors = ["Maxwell Rupp <gignsky@gignsky.com>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "recursive-tarballs"
description = "A command line utility written entirely in rust that creates tarballs from folders in the current working directory and optionally remove the folders that created those tarballs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
tar = "0.4"

# #tui stuff
# color-eyre = "0.6.3"
# crossterm = "0.28.1"
# ratatui = "0.29.0"
